2001-03-20  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-progress.c
	(gnc_progress_dialog_set_activity_mode): new func

	* src/guile/gnc.gwp: add new progress dialog api

	* src/engine/date.h: remove unneeded includes

	* src/scm/report/income-or-expense-pie.scm: make 'other' slice
	a link to a new pie report

	* src/scm/report.scm (gnc:make-report-options): new func

	* src/register/splitreg.c (configLayout): don't show balance
	column in stock registers

	* src/gnc-ui-util.c (xaccSPrintAmount): put currency symbol
	after quantity for shares values

	* src/guile/option-util.c (gnc_commit_option): update GUI value

	* src/gnome/gnc-html-guppi.c: new func for shutting down guppi

	* src/gnome/top-level.c (gnc_ui_shutdown): shutdown guppi

	* src/scm/report/income-or-expense-pie.scm: use shorter names
	for reports

	* src/scm/report/income-expense-graph.scm: work on display

	* src/scm/html-utilities.scm (gnc:account-anchor-text): new func

	* src/gnome/gnc-html.c: check for null args

	* src/scm/report/income-or-expense-pie.scm: work on display

	* src/scm/html-utilities.scm: add function for assigning colors

2001-03-19  Dave Peticolas  <dave@krondo.com>

	* src/gnome/gnc-html-guppi.c: fix callback pointer

	* src/engine/Transaction.c (xaccSplitGetCorrAccountName): i18n
	(xaccSplitGetCorrAccountCode): i18n

	* src/guile/gnucash.c.in (gnucash_lowlev_app_init): update
	last stable version

	* src/scm/report.scm: more work on display

	* src/scm/report/register.scm: add api for printing a
	register report. more work on display

	* src/gnome/window-report.c (gnc_print_report): add api
	for printing reports

	* src/gnome/gnc-html.c: check for no urltype callback

	* src/scm/report/stylesheet-plain.scm: add some more space
	between table cells

	* src/gnome/window-register.c: add support for printing reports

	* src/guile/gnc.gwp: add print report api

	* src/gnome/gnc-html.c: use PWARN, not printf

	* rpm/gnucash.spec.in: add finance-quote-helper as executable