@@ -8,7 +8,16 @@
 (gnc:depend  "report-html.scm")
 (gnc:depend  "date-utilities.scm")
 
-(let ()
+(let ((pagename-general (N_ "General"))
+      (optname-from-date (N_ "From"))
+      (optname-to-date (N_ "To"))
+      (optname-accounts (N_ "Accounts"))
+      (optname-report-currency (N_ "Report's currency"))
+
+      (pagename-display (N_ "Display Format"))
+      (optname-slices (N_ "Maximum Slices"))
+      (optname-plot-width (N_ "Plot Width"))
+      (optname-plot-height (N_ "Plot Height")))
   
   ;; Note the options-generator has a boolean argument, which
   ;; is true for income piecharts.  We use a lambda to wrap
@@ -20,17 +29,15 @@
             (lambda (new-option)
               (gnc:register-option options new-option))))
 
-      (add-option
-       (gnc:make-number-range-option
-        (N_ "Report Options") (N_ "Maximum Slices")
-        "a" (N_ "Maximum number of slices in pie") 7
-        2 20 0 1))
+      (gnc:options-add-date-interval!
+       options pagename-general
+       optname-from-date optname-to-date "a")
 
       (add-option
        (gnc:make-account-list-option
-	(N_ "Report Options") (N_ "Accounts")
+	pagename-general optname-accounts
 	"b"
-	(N_ "Select accounts to calculate income on")
+	(_ "Select accounts to calculate income on")
 	(lambda ()
 	  (gnc:filter-accountlist-type 
 	   (if is-income? '(income) '(expense))
@@ -41,31 +48,36 @@
 		 (if is-income? '(income) '(expense))
 		 accounts)))
 	#t))
-      
+
       (add-option
        (gnc:make-currency-option
-	(N_ "Report Options") (N_ "Report Currency")
+	pagename-general optname-report-currency
 	"c"
-	(N_ "Select the display value for the currency")
-	(gnc:locale-default-currency)))
-
-      (gnc:options-add-date-interval!
-       options "Report Options" 
-       (N_ "From") (N_ "To")
-       "d")
+	(_ "Select the display value for the currency")
+	(gnc:option-value
+	 (gnc:lookup-global-option "International"
+				   "Default Currency"))))
 
       (add-option
        (gnc:make-number-range-option
-        (N_ "Display Format") (N_ "Plot Width")
-        "a" (N_ "Width of plot in pixels.") 500
+        pagename-display optname-slices
+        "a" (N_ "Maximum number of slices in pie") 7
+        2 20 0 1))
+
+      (add-option
+       (gnc:make-number-range-option
+        pagename-display optname-plot-width 
+        "b" (N_ "Width of plot in pixels.") 500
         100 1000 0 1))
 
       (add-option
        (gnc:make-number-range-option
-        (N_ "Display Format") (N_ "Plot Height")
-        "b" (N_ "Height of plot in pixels.") 250
+        pagename-display optname-plot-height
+        "c" (N_ "Height of plot in pixels.") 250
         100 1000 0 1))
-      (gnc:options-set-default-section options "Report Options")      
+
+      (gnc:options-set-default-section options pagename-general)      
+
       options))
 
   ;; Similar arrangement to the options-generator.
@@ -78,17 +90,19 @@
     (define (op-value section name)
       (gnc:option-value (get-op section name)))
 
-    (let* ((max-slices (op-value "Report Options" "Maximum Slices"))
-           (report-currency (op-value "Report Options" "Report Currency"))
-	   (height (op-value "Display Format" "Plot Height"))
-	   (width (op-value "Display Format" "Plot Width"))
-	   (accounts (op-value "Report Options" "Accounts"))
-	   (to-date-tp (gnc:timepair-end-day-time 
-			(vector-ref (op-value "Report Options"
-					      "To") 1)))
+    (let* ((to-date-tp (gnc:timepair-end-day-time 
+			(vector-ref (op-value pagename-general
+					      optname-to-date) 1)))
 	   (from-date-tp (gnc:timepair-start-day-time 
-			  (vector-ref (op-value "Report Options"
-						"From") 1)))
+			  (vector-ref (op-value pagename-general
+						optname-from-date) 1)))
+	   (accounts (op-value pagename-general optname-accounts))
+           (report-currency (op-value pagename-general optname-report-currency))
+
+	   (max-slices (op-value pagename-display optname-slices))
+	   (height (op-value pagename-display optname-plot-height))
+	   (width (op-value pagename-display optname-plot-width))
+
 	   (document (gnc:make-html-document))
 	   (chart (gnc:make-html-piechart))
 	   (exchange-alist (gnc:make-exchange-alist
@@ -104,13 +118,21 @@
 	   (profit-collector-list
 	    (map profit-collector-fn accounts))
 
-            ;;; FIXME: better currency handling here
+            ;; Future improvement: Let the user choose which kind of
+            ;; currency combining she want to be done. Right now
+            ;; everything foreign gets converted
+            ;; (gnc:sum-collector-commodity) based on the weighted
+            ;; average of all past transactions.
 
 	   (double-list
 	    (map (lambda (commodity-collector)
 		   (abs (gnc:numeric-to-double 
-                         (cadr (commodity-collector 'getpair
-                                                    report-currency #t)))))
+			 (gnc:gnc-monetary-amount
+			  (gnc:sum-collector-commodity 
+			   commodity-collector report-currency 
+			   exchange-fn-internal)))))
+                         ;;(cadr (commodity-collector 'getpair
+                         ;;           report-currency #t)))))
 		 profit-collector-list))
            (combined (zip double-list accounts))
            (accounts-or-names '())
@@ -134,11 +156,12 @@
             (set! combined
                   (append start
                           (list (list sum (_ "Other")))))
-            (let* ((name (if is-income? "Income Piechart" "Expense Piechart"))
+            (let* ((name (if is-income? (N_ "Income Piechart") 
+			     (N_ "Expense Piechart")))
                    (options (gnc:make-report-options name))
                    (account-op (gnc:lookup-option options
-                                                  "Report Options"
-                                                  "Accounts")))
+                                                  pagename-general
+                                                  optname-accounts)))
               (call-with-values (lambda () (unzip2 finish))
                                 (lambda (ds as)
                                   (gnc:option-set-value account-op as)))
@@ -153,8 +176,8 @@
 
       (gnc:html-piechart-set-title!
        chart (if is-income? 
-                 (N_ "Income by Account")
-                 (N_ "Expenses by Account")))
+                 (_ "Income by Account")
+                 (_ "Expenses by Account")))
 
       (gnc:html-piechart-set-subtitle!
        chart (sprintf #f
